2002-04-13  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/version6.test: New file.
	* tests/Makefile.am (TESTS): Add tests/version6.test.
	* automake.in (version_check): Return 0 on equality.

2002-04-11  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Bump version to 1.6.1a.

2002-04-11  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Release 1.6.1.

2002-04-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in (APIVERSION): Fix definition.

2002-04-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* NEWS: Catch up with changes since 1.6.

2002-04-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/yacc8.test: Don't assume GNU make, run config.status
	to regenerate the Makefile.

2002-04-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* Makefile.am (maintainer-check): Make sure `$MAKE -e' is
	always followed by a SHELL setting.
	* tests/ansi3.test, tests/ansi5.test, tests/subobj3.test: Set
	SHELL when calling `$MAKE -e'.

2002-04-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/subobj9.test: Use configure.in, not configure.ac,
	otherwise this fails with old libtool versions.

2002-04-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
	versions.

2002-04-10  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* ChangeLog.2001: New file, extracted from ChangeLog.
	* Makefile.am (EXTRA_DIST): Add it.

2002-04-09  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.texi (Canonicalization): The sources for libmumble++.a
	go into libmumble___a_SOURCES.

2002-04-07  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* Makefile.am (maintainer-check): Check for `sleep 1' uses in the
	test suite.  Suggest `sleep 2' instead.
	* tests/confsub.test: Use `sleep 2'.

2002-04-04  Paul Eggert  <eggert@twinsun.com>

	* lib/am/subdirs.am:
	($(RECURSIVE_TARGETS), maintainer-clean-recursive):
	$(MAKEFLAGS) -> $$MAKEFLAGS, so that we don't run into problems if
	MAKEFLAGS contains '$(...)'.
