@@ -1,5 +1,12 @@
 2002-04-13  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* tests/man2.test: New file.
+	* tests/Makefile.am (TESTS): Add man2.test.
+	* lib/am/mans.am (install-man%SECTION%): Change the extension
+	of the man pages being installed, as documented.
+
+2002-04-13  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	* tests/version6.test: New file.
 	* tests/Makefile.am (TESTS): Add tests/version6.test.
 	* automake.in (version_check): Return 0 on equality.
